docs/errors/examples/try-without-catch-or-finally/try-without-catch-or-finally.grob
// E2204 — `try` block with neither a `catch` clause nor a `finally`
fn readConfig(path: string): string {
    try {
        return fs.read(path)
    }
}

print(readConfig(`C:\config.json`))
